styles/globals.css
@import url("http://fonts.cdnfonts.com/css/cloister-black");
html,
body {
  padding: 0;
  margin: 0;
  font-family: "Times New Roman", Times, serif;
  overflow-x: hidden;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
  body {
    color: white;
    background: rgb(47, 47, 47);
  }
}

::-webkit-scrollbar {
  width: 0.5em;
}
::-webkit-scrollbar-track-piece {
  background-color: #a4a4a4;
}
::-webkit-scrollbar-thumb {
  background-color: rgb(94, 0, 0);
}

